# portofolio

./: .gitignore  README.md  next.config.js  next.config.ts  package.json  pyproject.toml
nest/: .gitignore  AUDIT_PLAN.md  README.md  ROADMAP.md  package.json  tsconfig.json
nest/contexte/: ARCHITECTURE.md  ROADMAP.md  agent_preprompts.md  architecture_systeme.md  debate_synthesis_prompts.md  optimisations_prompts.md
nest/src/: app.module.ts  coordination-architecture.md  index.ts  main.ts
nest/src/components/: registry.ts
nest/src/config/: poolConfig.ts
nest/src/core/: circuit-breaker.ts  coordination-system.ts  data-partitioning.ts  event-bus.ts  knowledge-graph.ts
nest/src/debate/: debateProtocol.ts  kagEngine.ts  ragEngine.ts
nest/src/examples/: components-usage.ts
nest/src/handlers/: coordination-handler.ts
nest/src/legacy/: README.md
nest/src/orchestrator/: index.ts  outputCollector.ts  poolManager.ts  router.ts
nest/src/rag-kag/: README.md  rag-kag.module.ts
nest/src/scripts/: create-model.ts  download-huggingface-models.ts  download_model_weights.ts
next/: .dockerignore  .env.example  .env.production  .eslintrc.json  .gcloudignore  .gitignore  Dockerfile  cloudbuild.yaml  docker-compose.yml  next.config.ts  package.json  tailwind.config.ts
py-ml/: Dockerfile  IMPLEMENTATION_PLAN_DETAILLE.md  INTEGRATION_PLAN.md  PLAN_IMPLEMENTATION_DETAILLE.md  PYTHON_INTEGRATION.md  PYTHON_INTEGRATION_GUIDE.md  README.md  ROADMAP.md  docker-compose.yml  requirements.txt
py-ml/doc/: ROADMAP.md  model_quantization.md  resource_orchestrator.md
(+239 files in other folders)
